[gd_scene load_steps=16 format=2]

[ext_resource path="res://gameplay/actor/player/player/DashWindUp.tres" type="Animation" id=1]
[ext_resource path="res://gameplay/actor/movement/jump_movement/JumpMovement.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/actor/player/player/lantern_dash_wind_up.png" type="Texture" id=3]
[ext_resource path="res://gameplay/actor/player/player/hat.png" type="Texture" id=4]
[ext_resource path="res://gameplay/actor/movement/gravity_movement/GravityMovement.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameplay/actor/movement/move_collection/MoveCollection.tscn" type="PackedScene" id=6]
[ext_resource path="res://gameplay/actor/movement/horizontal_movement/HorizontalMovement.tscn" type="PackedScene" id=7]
[ext_resource path="res://gameplay/actor/player/player/Player.gd" type="Script" id=8]
[ext_resource path="res://gameplay/actor/movement/wall_jump_movement/WallJumpMovement.tscn" type="PackedScene" id=9]
[ext_resource path="res://gameplay/actor/player/player/torso.png" type="Texture" id=10]
[ext_resource path="res://gameplay/actor/player/player/leg.png" type="Texture" id=11]
[ext_resource path="res://gameplay/actor/player/player/hand.png" type="Texture" id=12]
[ext_resource path="res://gameplay/actor/player/player/lantern.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 24 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24.1912 )
shape = SubResource( 1 )

[node name="dash_wind_up" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -27.9619 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="MoveCollection" parent="." instance=ExtResource( 6 )]

[node name="HorizontalMovement" parent="MoveCollection" instance=ExtResource( 7 )]

[node name="GravityMovement" parent="MoveCollection" instance=ExtResource( 5 )]

[node name="JumpMovement" parent="MoveCollection" instance=ExtResource( 2 )]

[node name="WallJumpMovement" parent="MoveCollection" instance=ExtResource( 9 )]

[node name="DashWindUpAnimationPlayer" type="AnimationPlayer" parent="."]
anims/DashWindUp = ExtResource( 1 )

[node name="WallCheckArea" type="Area2D" parent="."]
position = Vector2( 0, -34.7115 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCheckArea"]
position = Vector2( 0, 6.83501 )
shape = SubResource( 2 )

[node name="Visuals" type="Node2D" parent="."]
z_index = 5

[node name="Sprites" type="Node2D" parent="Visuals"]
scale = Vector2( 0.5, 0.5 )

[node name="torso" type="Sprite" parent="Visuals/Sprites"]
position = Vector2( 0, -75.1705 )
texture = ExtResource( 10 )

[node name="hat" type="Sprite" parent="Visuals/Sprites/torso"]
position = Vector2( -4.78227, -28.4457 )
texture = ExtResource( 4 )

[node name="Legs" type="Node2D" parent="Visuals/Sprites/torso"]
position = Vector2( 0.157776, 35.1119 )

[node name="frontleg" type="Sprite" parent="Visuals/Sprites/torso/Legs"]
position = Vector2( 8.16074, -0.61869 )
texture = ExtResource( 11 )
offset = Vector2( 0, 9.62455 )

[node name="leg" type="Sprite" parent="Visuals/Sprites/torso/Legs/frontleg"]
position = Vector2( 0, 18.353 )
texture = ExtResource( 11 )
offset = Vector2( 0, 9.62455 )

[node name="backleg" type="Sprite" parent="Visuals/Sprites/torso/Legs"]
modulate = Color( 0.788235, 0.788235, 0.788235, 1 )
position = Vector2( -11.8981, -0.61869 )
z_index = -1
texture = ExtResource( 11 )
offset = Vector2( 0, 9.62455 )

[node name="leg" type="Sprite" parent="Visuals/Sprites/torso/Legs/backleg"]
position = Vector2( 0, 18.353 )
texture = ExtResource( 11 )
offset = Vector2( 0, 9.62455 )

[node name="hand" type="Sprite" parent="Visuals/Sprites/torso"]
position = Vector2( 28.1326, 21.1375 )
texture = ExtResource( 12 )

[node name="lantern" type="Sprite" parent="Visuals/Sprites/torso/hand"]
position = Vector2( 15.1747, 19.2849 )
z_index = -1
texture = ExtResource( 13 )
